# nyc-taxi-demand-predictor

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  test_api.py  test_endpoints.py
.github/workflows/: ci.yml
docs/: DESIGN_DECISIONS.md
notebooks/: 01_eda.ipynb  02_baseline_model.ipynb  03_feature_engineering.ipynb  04_xgboost.ipynb
scripts/: smoke_test_api.ps1
urban_mobility_forecaster/: __init__.py  api.py  config.py  download.py  features.py  ingest.py  train.py
