[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "urban_mobility_forecaster"
version = "0.0.1"
description = "Predicts NYC taxi demand with 85% accuracy to assist fleet dispatching."
authors = [
  { name = "Tabish" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["urban_mobility_forecaster"]
include = ["pyproject.toml", "urban_mobility_forecaster/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["urban_mobility_forecaster"]
force-sort-within-sections = true

